Home page updates

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -2,6 +2,7 @@
 // Colors
 //
 
-$mraa-lt-blue: #83CBDC;
+$lavendar: #8c83dc;
+$kumquat: #f8a03b;
 
-$sidebar-color: $mraa-lt-blue !default;
+$sidebar-color: $lavendar !default;
