Change Sidebar Color

--- a/_sass/utilities/_colors.scss
+++ b/_sass/utilities/_colors.scss
@@ -238,6 +238,6 @@
   background-color: $red-300 !important;
 }
 
-.bg-mraa-blue {
-  background-color: $mraa-lt-blue;
+.bg-lavendar {
+  background-color: $lavendar;
 }
