--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -74,7 +74,7 @@ $mraa-lt-blue: #99DEEE!default;
 
 $body-background-color: $white !default;
 // $sidebar-color: $grey-lt-000 !default;
-$sidebar-color: $bg-lavendar !default;
+$sidebar-color: $lavendar !default;
 $search-background-color: $white !default;
 $table-background-color: $white !default;
 $code-background-color: $grey-lt-000 !default;
