Fix sidebar scss

--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -70,7 +70,8 @@ $red-100: #f96e65 !default;
 $red-200: #e94c4c !default;
 $red-300: #dd2e2e !default;
 
-$mraa-lt-blue: #99DEEE!default;
+$lavendar: #8c83dc !default;
+$kumquat: #f8a03b !default;
 
 $body-background-color: $white !default;
 // $sidebar-color: $grey-lt-000 !default;
